fix authentication & make screen responsive & update documentation
